<resources>
    <string name="app_name" translatable="false">dropTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="title_notifications">Notifications</string>
    <string name="notifications_empty_message">Your notifications will be here.</string>

    <string name="greeting_morning">Good Morning! \uD83C\uDF05</string>
    <string name="greeting_afternoon">Good Afternoon! \u2600\uFE0F</string>
    <string name="greeting_evening">Good Evening! \uD83C\uDF19</string>
    <string name="greeting_night">Good Night! \uD83C\uDF1C</string>

    <string name="settings">Settings</string>

    <string name="good_evening">Good Evening!</string>
    <string name="today_default">Today: 0ml</string>

    <string name="add_water">Add water</string>
    <string name="add_water_dialog_title">Add Water</string>
    <string name="small_amount">Small - 250ml</string>
    <string name="medium_amount">Medium - 500ml</string>
    <string name="large_amount">Large - 750ml</string>
    <string name="cancel">Cancel</string>
    <string name="water_added">%d ml added!</string>
    <string name="today_total">Today: %dml</string>
    <string name="last_added">Last: %dml</string>
    <string name="last_added_default">Last: --ml</string>
    <string name="goal_reached">🎉 You reached your daily goal!</string>
    <string name="undo">Undo</string>
    <string name="goal_crushing">🔥 You\'re crushing your goal! +%dml</string>
</resources>